apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@normalize_names.graphql-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/normalize_names.graphql
---
{
    "connectors-subgraph_Query_users_0": Connector {
        id: ConnectId {
            label: "connectors-subgraph.example http: GET ",
            subgraph_name: "connectors-subgraph",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.users),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..4,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
    },
    "connectors-subgraph_Query_user_0": Connector {
        id: ConnectId {
            label: "connectors-subgraph.example http: GET /{$args.id}",
            subgraph_name: "connectors-subgraph",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.user),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $args,
                                        location: 2..7,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "id",
                                            location: 8..10,
                                        },
                                    ],
                                    location: 2..10,
                                },
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "b",
                            ),
                            range: Some(
                                5..6,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..6,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
    },
}
